unpackaged/main/default/objects/n2de__Distributor_Tag__c/n2de__Distributor_Tag__c.object-meta.xml
<CustomObject>
    <label>Distributor Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>