unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Comparison_operator__c.field-meta.xml
<CustomField>
    <fullName>n2de__Comparison_operator__c</fullName>
    <label>Comparison operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>