unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Distributor_Tag_Value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_Tag_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Tag Value</label>
    <referenceTo>n2de__Tag_Value__c</referenceTo>
    <relationshipLabel>Distributor Tags</relationshipLabel>
    <relationshipName>Distributor_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>