unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_name__c</fullName>
    <inlineHelpText>Filter type, member tag, operator and comparison tag value used to filter member selection used by this distributor.</inlineHelpText>
    <label>Field name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>