unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Field_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_type__c</fullName>
    <label>Field type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>