unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>