unpackaged/main/default/objects/n2de__Distributor_Tag__c/fields/n2de__Type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Type__c</fullName>
    <description>The type of distribution tag - either a static value or dynamic retrieving tag value from a field</description>
    <inlineHelpText>The type of distribution tag - either a static value or dynamic retrieving tag value from a field</inlineHelpText>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>